[build-system]
requires=[
	"setuptools>=64.0",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "konnektor"
dynamic = ["version"]
authors=[
    {name="Benjamin Ries", email="benjamin-ries@outlook.com"},
    {name="Hannah Baumann", email="hannah.baumann@omsf.io"},
    {name="David Swenson", email="dwhswenson@gmail.com"},
    {name="Irfan Alibay", email="irfan.alibay@gmail.com"},
    {name="Mike Henry", email="mike.henry@choderalab.org"},
    {name="Richard J Gowers", email="richardjgowers@gmail.com"},
]
description="Konnektor is a package for calculating networks."
readme="README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'gufe',
  'numpy',
  'rdkit',
  'networkx',
  'scikit-mol',
  'scikit-learn',
  'tqdm',
  'ipycytoscape',
]

[tool.setuptools_scm]
version_file = "src/konnektor/_version.py"
fallback_version = "0.0.0"

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov[all]',
]
dev = [
  'pre-commit',
]

[project.urls]
"Homepage" = "https://github.com/OpenFreeEnergy/konnektor"

[tool.setuptools.package-data]
konnektor = ["**/*.sdf",]

[tool.pytest.ini_options]
addopts = "--ignore=dev"

[tool.ruff]
exclude = [
    "*.ipynb",  # TODO: auto-format notebooks
]
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "E",  # pycodestyle errors
    # "C901"  # mccabe complexity  TODO: add this back in
    "UP",
]
ignore = [
    "E402",   # module-level import not at top (conflicts w/ isort)
    "E501",  # line-length violations (black enforces these)
    "E731",  # lambda expressions (TODO: we should fix these)
    "E722",  # bare excepts (TODO: we should fix these in a follow-up PR)
    ]
